<resources>
    <string name="app_name">DisneyPrincesseseseses</string>
    <string name="text1">
        Star\n\n

Star Butterfly, also known as Star the Underestimated, is the main and titular protagonist of Star vs. the Forces of Evil. She is a teenage princess of the Kingdom of Mewni (located in another dimension) sent to Earth by her parents in order to learn how to use the royal magic wand, with supervision from Glossaryck.\n

Star is a fifteen-year-old girl with a height of 5\' 2\" (1.57 m). She has fair skin, light blue eyes and long blonde hair that goes down to her knees. Most of the time Star\'s bangs overlap her eyes and eyebrows, possibly due to how large her eyes are drawn.\n

Her cheeks normally have posh pearl pink hearts on them. The heart marks on her cheeks sometimes change into other things to reflect her emotions.\n
    </string>
    <string name="text2">
        Tiana\n\n

Princess Tiana of Maldonia (sometimes \"Tia\") is the protagonist of Disney\'s 2009 animated feature film, The Princess and the Frog. She is a gifted cook living in New Orleans during the Jazz Age, with dreams of opening a restaurant of her own. In a desperate attempt to achieve her goal, Tiana shares a kiss with a prince that had been magically transformed into a frog. In doing so, Tiana falls victim to the curse, as well, setting off an adventure in the bayou to find a cure.\n

Tiana is the ninth official Disney Princess and the most recent to originate from a traditionally-animated feature.\n
    </string>
    <string name="text3">
        Tiger Lily\n\n

        Tiger Lily resides in the Indian encampment on Neverland. She serves as the princess of her people, ruling the tribe along her father, the imposing chief. Tiger Lily is established as a close friend of Neverland\'s local protector, Peter Pan. Peter Pan suggests that their relationship is romantic, as Tiger Lily and Peter displayed a mutual attraction (even sharing a kiss at one point). As such, Tiger Lily is deathly loyal to Peter, standing her ground to protect him even in the face of Captain Hook.\n
    </string>
    <string name="text4">
        Vanellope von Schweetz\n\n

Vanellope von Schweetz is the deuteragonist of Disney\'s 2012 animated feature film, Wreck-It Ralph and its 2018 sequel. She is a young, razor-tongued racer that originates from the candy-themed racing game Sugar Rush. Due to being a "glitch", Vanellope was forbidden to race by order of King Candy. She was nevertheless determined to become a real racer, and sought to accomplish her goal by teaming up with a fellow misfit, Wreck-It Ralph. Over the course of their adventure, Vanellope would uncover the truth behind her glitch, while also learning to use it as a "superpower" to overcome adversity.\n
    </string>
    <string name="text5">
        Eilonwy\n\n

Princess Eilonwy of Llyr is the deuteragonist in Disney\'s 1985 feature film The Black Cauldron and Taran\'s love interest.\n

Eilonwy is portrayed as plucky, cynical, and talkative, as shown by her tendency to go off into rants at Taran for seemingly trivial reasons (though he can be snippy back in their mutual antagonism).\n

Despite her naturally strong-willed personality, she can be affectionate (for she tries to get Taran\'s spirits up in one scene and seems fond of Gurgi) and emotional, as shown by her anxiety after escaping from the Horned King\'s castle and her genuine sadness at Taran\'s near-sacrifice during the film\'s climax; by the end of the movie, Eilonwy has dropped her defenses significantly and she and Taran begin to be romantically involved.\n

Eilonwy appears to be addled once she first appears, confused and thinking her reasons of being imprisoned in the Horned King\'s castle vague\n
    </string>
    <string name="text6">
        Faline\n\n

Faline is a female deer and one of the deuteragonists of Bambi. She is the daughter of Ena and an unknown buck. First shown as a fawn and later as a young adult doe, she is Bambi\'s love interest and eventual mate.\n
    </string>
    <string name="text7">
        Kida\n\n

Kidagakash "Kida" Nedakh is the deuteragonist of Disney\'s 2001 animated feature film Atlantis: The Lost Empire and its 2003 direct-to-video sequel. She is the daughter of Kashekim Nedakh, King of Atlantis.\n

Kida is a warrior princess, making her strong and very skilled at combat. It is mentioned that several thousand years ago, Kida would have killed outsiders on sight. By the present time, however, Kida has become so curious about Atlantis\'s past that she is willing to let in outsiders with the hope that they could help her rediscover Atlantis\'s history, even as far as taking a liking to Milo. She is shown to love her father and husband very much. Although she can seem quite forceful, violent, and aggressive at times, she has a kind heart and a general respect for all creatures.\n
    </string>
    <string name="text8">
        Lady Marian\n\n

Maid Marian is a vixen from Disney\'s 1973 animated feature film, Robin Hood. She is the love interest and later wife of the title character, based on the character from the Robin Hood legend\n

Maid Marian is a very beautiful, ladylike, nice and kind woman. Despite being separated from him, Maid Marian is still very much in love with Robin Hood as he loves her. So much so that she finds the courage to plead for his life.\n

She also loves children and is happy to meet Skippy and the others when the former sneaks into the castle to retrieve his arrow, which he had accidentally shot over the walls of the castle as he was playing with the bow he had gotten as a birthday present from Robin Hood. She eagerly and willingly plays the role of the damsel-in-distress as Skippy (playing Robin Hood) fights with Lady Kluck (playing Prince John) to save her, and then takes her into a grove of bushes and trees that represents Sherwood Forest. She also kisses him on the cheek as a way of thanking him and to teach him how a hero should treat his "lady fair".\n

Indeed, it is thought that after Marian and Robin Hood are married, Skippy and Marian develop something akin to a mother-son relationship\n
    </string>
    <string name="text9">
        Megara\n\n

Megara (better known as Meg) is the deuteragonist of Disney\'s 1997 animated feature film, Hercules. A snarky "femme fetale", Meg once served as a reluctant minion of Hades, to whom she was indebted. Having endured a troubled past, Meg developed a cynical disposition, her only goal being to rescind her bind and live a life of solitude. Her outlook would slowly start to change upon meeting Hercules, whose innocence would prove there is still good in the world.\n

In her youth, Meg was romantic and open to giving love. She deeply cherished the relationship she shared with her boyfriend, who one day lost his life. To save him, she sold her soul and offered servitude to Hades, God of the Underworld. Her boyfriend was revived, as agreed, but he heartlessly left Meg for another woman shortly thereafter. Since then, she\'s had trouble trusting others and finding the courage to love again. Having become jaded and cynical as a result of her past, Meg upheld her end of the bargain by assisting Hades in his quest to take over the cosmos. According to a brief exchange, however, Hades held some amount of sympathy for Meg\'s plight and was open to subtracting years from her sentence based on her performances in the field.\n
    </string>
    <string name="text10">
        Nala\n\n

Nala is the deuteragonist of Disney\'s 1994 animated feature film The Lion King. She is the lifelong best friend of Simba, prince of the Pride Lands. When the kingdom is taken over by Scar and his hyena henchmen, Nala rebels against their reign by assisting Simba in reclaiming the throne. She would later become Simba\'s queen and the mother of two cubs: Kiara and Kion.\n
    </string>
    <string name="aaaa">some String</string>
    <string name="textview">TextView</string>
    <string name="start">Start</string>
    <string name="retry">Retry</string>
    <string name="textScroll">Click and see which Disney Priness are you...</string>
    <string name="upper_text">Which Disney Princess are you?</string>
</resources>
