<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:text="@string/upper_text"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/princessimg"
        android:layout_width="match_parent"
        android:layout_height="378dp"
        android:contentDescription="@string/aaaa"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="randomPrincess"
        android:text="@string/start"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/retry" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textScroll"
            android:textSize="18sp" />
    </ScrollView>

</LinearLayout>